# DLVHEX-DIFF

./: Makefile  Makefile.am  Makefile.in  config.status  configure  configure.ac  configure.lineno  configure.scan  libtool
autom4te.cache/: output.0  output.1  requests  traces.0  traces.2  traces.3
example/: diff-test.hex  epoch-test.hex  minus_test.hex  multiply_test.hex  plus_test.hex
src/: Makefile  Makefile.am  Makefile.in  config.h  config.h.in  config.h.in~  diff copy.cpp-old.cpp  diff.cpp  libdlvhexplugin-diff.la
src/.deps/: diff.Plo  stringprefix.Plo
src/.libs/: libdlvhexplugin-diff.la  libdlvhexplugin-diff.lai
